Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.1, 5.15.4, 6.3
-
e74bcf7514 (qt/qtdeclarative/dev) e74bcf7514 (qt/tqtc-qtdeclarative/dev), 8f0233933 (tqtc/lts-5.15)
Description
Attached example freezes when you press tab key once, then click on the Empty tab and press tab key again.
Attachments
Issue Links
- relates to
-
QTBUG-65943 QQuickItemPrivate::nextPrevItemInTabFocusChain not terminating
-
- Open
-
-
QTBUG-85673 Items with visible=false still allow interaction with hidden input fields, showing text selection indicators etc (screenshots&demo attached)
-
- Closed
-
-
QTBUG-96762 When focusable TextField is nested within invisible Item, pressing Tab hangs in nextPrevItemInTabFocusChain()
-
- Closed
-
For Gerrit Dashboard: QTBUG-87190 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
372463,7 | WIP: Don't allow hidden items to get focus | dev | qt/qtdeclarative | Status: DEFERRED | -2 | 0 |
409500,4 | QQuickItem: Guard against cycles in nextPrevItemInTabFocusChain | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
410120,1 | QQuickItem: Guard against cycles in nextPrevItemInTabFocusChain | 6.3 | qt/qtdeclarative | Status: ABANDONED | +2 | 0 |
410121,2 | QQuickItem: Guard against cycles in nextPrevItemInTabFocusChain | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
460789,3 | QQuickItem: Guard against cycles in nextPrevItemInTabFocusChain | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |